package org.example;

public class VirtualGuide {
    public void proveerTour(Visitante visitante) {
        System.out.println("Proporcionando un tour virtual a " + visitante.getNombre());
    }
}
